--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,306 @@
 .text {
     font-family: 'EB Garamond', serif;
 }
+body.active-modal {
+    overflow-y: hidden;
+}
+
+/* .btn-modal {
+    padding: 10px 20px;
+    display: block;
+    margin: 100px auto 0;
+    font-size: 18px;
+} */
+
+.modal,
+.overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlay {
+    background: rgba(49, 49, 49, 0.8);
+}
+
+.modal-content {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.4;
+    background: inherit;
+    padding: 14px 28px;
+    border-radius: 3px;
+    max-width: 800px;
+    min-width: 400px;
+}
+
+.close-modal {
+    position: absolute;
+    right: 40px;
+    top: 20%;
+    width: 30px;
+    height: 30px;
+    /* background-color: #29B6F6; */
+    background-color: inherit;
+    border: 1px solid #fff;
+    text-align: center;
+    padding: 5px 7px;
+    border-radius: 50%;
+}
+
+.close-modal:hover {
+    background-color: #ccc;
+}
+
+/* login */
+
+
+.logo-component {
+    width: 100vv;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 800px;
+    height: 600px;
+}
+
+.logo-left {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: whitesmoke;
+}
+
+.logo-left>div {
+    margin-top: 40px;
+}
+
+.logo-left-header {
+    font-size: 24px;
+    color: #000;
+    text-align: center;
+    width: 70%;
+}
+
+.input-side>div {
+    margin: 10px;
+}
+
+
+
+.input-side>div>div>input {
+    width: 300px;
+    height: 35px;
+    border: 1px solid #ccc;
+    outline: none;
+    border-radius: 5px;
+    padding-left: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
+.logo-left-email {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-left-login {
+    width: 300px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-left-login>button {
+    width: 60%;
+    height: 80%;
+    border: none;
+    border-radius: 4px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.logo-left-login>button:hover {
+    background-color: #ccc;
+    border: 1px solid #fff;
+}
+
+
+/* .logo-left-social {
+    width: 260px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+
+/* .login-left-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} */
+
+/* .login-left-buttons>div {
+    margin-bottom: 10px;
+} */
+
+
+/* .logo-left-social>button {
+    width: 70%;
+    height: 85%;
+    border: none;
+    border-radius: 4px;
+    margin-left: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+} */
+
+/* .logo-left-social>button:hover {
+    background-color: #ccc;
+    border: 1px solid #fff;
+} */
+
+/* .login-left-register {} */
+
+.logo-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #29B6F6;
+}
+
+.input-side {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+}
+
+.logo-info {
+    display: flex;
+    font-size: 14px;
+    justify-content: space-between;
+    width: 70%;
+}
+
+.logo-Navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+
+
+/* slider */
+body {
+    background: #ccc;
+}
+
+.App {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.slick-slide>div {
+    margin: 0 10px;
+}
+
+.slick-list {
+    margin: 0 -10px;
+}
+
+.card {
+    border: 1px solid #fff;
+    background: black;
+    border-radius: 8px;
+    overflow: hidden;
+
+    height: 400px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.card-top h1 {
+    font-size: 0.9rem;
+    margin: 20px;
+}
+
+.card-top>img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    background: black;
+}
+
+.card-bottom {
+    margin: 10px 20px;
+}
+
+.category {
+    position: relative;
+}
+
+.category::before {
+    content: '';
+    background: rgb(255, 61, 61);
+    position: absolute;
+    top: calc(100% + 10px);
+    left: 0;
+    right: 0;
+    height: 2px;
+}
+
+
+
+
+
+/* log in */
+
+.login-form {
+    max-width: 412px;
+    margin: 30px auto;
+}
+
+.form-label {
+    position: absolute;
+    left: 0;
+    top: 10px;
+    color: #999;
+    background-color: #fff;
+    z-index: 10;
+    transition: font-size 150ms ease-out, -webkit-transform 150ms ease-out;
+    transition: transform 150ms ease-out, font-size 150ms ease-out;
+    transition: transform 150ms ease-out, font-size 150ms ease-out, -webkit-transform 150ms ease-out;
+}
+
+.form-input {
+    position: relative;
+    padding: 12px 0px 5px 0;
+    width: 100%;
+    outline: 0;
+    border: 0;
+    box-shadow: 0 1px 0 0 #e5e5e5;
+    transition: box-shadow 150ms ease-out;
+}
