--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body.active-modal {
 
 .close-modal {
     position: absolute;
-    right: 40px;
+    right: 50px;
     top: 20%;
     width: 30px;
     height: 30px;
@@ -68,9 +68,11 @@ body.active-modal {
     border-radius: 50%;
 }
 
-.close-modal:hover {
+/* .close-modal:hover {
     background-color: #ccc;
 }
+
+*/
 
 /* login */
 
@@ -97,7 +99,7 @@ body.active-modal {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
 }
 
 .logo-left>div {
@@ -226,6 +228,7 @@ body.active-modal {
 
 
 
+
 /* slider */
 body {
     background: #ccc;
@@ -307,14 +310,29 @@ body {
     transition: font-size 150ms ease-out, -webkit-transform 150ms ease-out;
     transition: transform 150ms ease-out, font-size 150ms ease-out;
     transition: transform 150ms ease-out, font-size 150ms ease-out, -webkit-transform 150ms ease-out;
+    
 }
 
 .form-input {
     position: relative;
+    font-size: 18px;
     padding: 12px 0px 5px 0;
     width: 100%;
     outline: 0;
     border: 0;
     box-shadow: 0 1px 0 0 #e5e5e5;
     transition: box-shadow 150ms ease-out;
+}
+.form-check-label {
+    font-size: 18px;
+    color: rgb(100, 98, 98);
+}
+
+.terms {
+    color: rgb(100, 98, 98);
+    font-weight: bold;
+}
+
+.signup {
+    font-weight: bold;
 }
